# py2adobe_reporting_package

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
docs/: reporting_management.md
py2AdobeReporting/: __init__.py  __version__.py  auth.py  http_client.py  reporting_api.py
py2AdobeReporting/cja_functions/: reporting_management.py
py2adobe_reporting/: __init__.py  __version__.py  auth.py  http_client.py  reporting_api.py  utils.py
py2adobe_reporting/cjaFunctions/: reporting_management.py
py2adobe_reporting/cja_functions/: reporting_management.py
test/: exceptions_test.py  reporting_management_test.py
