[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "py2Adobe"
version = "1.0.0"
authors = [
    { name = "James Mitchell", email = "james.mitchell1@sony.com" },
]
description = "Adobe package wrapper for CJA API based reporting"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib==3.10.1",
    "numpy==2.2.4",
    "pandas==2.2.3",
    "prophet==1.1.6",
    "pytest==8.2.2",
    "pytz==2024.1",
    "Requests==2.32.3",
    "scikit_learn==1.6.1",
    "setuptools==70.0.0",
    "tomli==2.2.1",
    "tomli_w==1.2.0",
]

[project.urls]
Homepage = "https://github.sie.sony.com/sie-private/py2Adobe"
Issues = "https://github.sie.sony.com/sie-private/py2Adobe"
