[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "py2adobe_reporting"
version = "0.0.2.test"
authors = [
    { name = "James Mitchell", email = "jaytmii@gmail.com" },
]
description = "Data Engineering tool for accessing Adobe CJA Reporting API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "Requests>=2.32.3",
    "pandas>=2.2.3",
    "numpy>=2.2.4",
    "plotly>=6.5.0",
    "pytz>=2024.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.2",
  "pylint>=4.0.4",
]

[project.urls]
Homepage = "https://github.com/jaytmii/py2adobe_reporting_package"
Repository = "https://github.com/jaytmii/py2adobe_reporting_package"
Issues = "https://github.com/jaytmii/py2adobe_reporting_package/issues"